--- a/E_commerce/E_commerce/templates/base.html
+++ b/E_commerce/E_commerce/templates/base.html
@@ -16,7 +16,7 @@
     <!-- jquery -->
     <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-
+    
 
 
 
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Logo -->
-            <a class="navbar-brand" href="/"><img src="{% static 'img/logo_e.png'%}" class="logoimg" alt=""></a>
+            <a class="navbar-brand" href="/"><img src="{% static 'img/logo_e.png'%}" class="logoimg" alt="PS-Thakkar"></a>
 
             <!-- Toggle button for mobile view -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -55,6 +55,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/contactus">Contact Us</a>
                     </li>
+                    {% if request.user.is_staff  %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">Dashboard</a>
+                    </li>
+                    {% else %}
+                    {% endif %}
+                    
                 </ul>
 
                 <!-- Space between elements -->
