--- a/E_commerce/E_commerce/templates/profile.html
+++ b/E_commerce/E_commerce/templates/profile.html
@@ -68,10 +68,35 @@
             </ul>
             <a href="{% url 'updateuser' %}" class="btn btn-success my-3">Update Profile</a>
             <a href="{% url 'changepasswd' %}" class="btn btn-success my-3">Change Passwoard</a>
-            <a href="{% url 'deleteuser' %}" class="btn btn-danger my-3">Permanent Delete Account</a>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                Delete Account Permanent
+              </button>
+
             <a href="{% url 'sigout' %}" class="btn btn-secondary my-3">Sign-out</a>
         </div>
     </div>
+
+
+<!-- for final delete popup -->
+  <!-- Modal -->
+  <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteModalLabel">Confirm Delete Account</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to permanently delete your account?
+        </div>
+        <div class="modal-footer">
+          <a href="{% url 'deleteuser' %}" class="btn btn-danger">Permanent Delete Account</a>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </body>
 
 {% endblock body %}
