--- a/E_commerce/E_commerce/templates/sidebar.html
+++ b/E_commerce/E_commerce/templates/sidebar.html
@@ -50,8 +50,10 @@
 <div class="main-container d-flex">
     <div class="sidebar" id="side_nav">
         <div class="header-box px-2 pt-3 pb-4 d-flex justify-content-between">
-            <h1 class="fs-4"><a class="navbar-brand" href="/"><img src="{% static 'img/logo_e.png'%}" class="logoimg"
-                        alt="PS-Thakkar"></a><span class="text-white">PS-Thakkar</span></h1>
+            <h1 class="fs-4"><a class="navbar-brand" href="/">
+                {% comment %} <img src="{% static 'img/logo_e.png'%}" class="logoimg"
+                        alt="PS-Thakkar"> {% endcomment %}
+            </a><span class="text-white">PS-Thakkar</span></h1>
             <button class="btn d-md-none d-block close-btn px-1 py-0 text-white"><i
                     class="bi bi-view-list"></i></button>
         </div>
