--- a/E_commerce/E_commerce/templates/404.html
+++ b/E_commerce/E_commerce/templates/404.html
@@ -24,6 +24,7 @@
 </style>
 <div class="errorpage">
    <h1>OOPS! Page Not Found</h1>
+   {{error}}
    <h1>Go Back To Home Page <a href="/" ><button class="btn btn-success">Go Home</button></a></h1>
 </div>
 {% endblock body %}
